--- a/app/src/main/res/layout/activity_edit_trip.xml
+++ b/app/src/main/res/layout/activity_edit_trip.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A35C5C">
+    android:background="#30555D">
 
     <Button
         android:id="@+id/edit_trip_uploade_button"
         android:layout_width="230dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/bushape"
         android:text="@string/upload_word"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_trip_warning_text" />
 
@@ -26,6 +28,8 @@
         android:layout_marginEnd="44dp"
         android:gravity="center_vertical"
         android:hint="@string/date_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_trip_available_weight" />
@@ -39,6 +43,8 @@
         android:layout_marginEnd="44dp"
         android:gravity="center_vertical"
         android:hint="@string/available_weight_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +59,8 @@
         android:layout_marginEnd="44dp"
         android:gravity="center_vertical"
         android:hint="@string/to_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,11 +71,13 @@
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="180dp"
         android:layout_marginEnd="44dp"
         android:layout_marginBottom="20dp"
         android:gravity="center_vertical"
         android:hint="@string/from_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintBottom_toTopOf="@+id/edit_trip_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -76,22 +86,22 @@
 
     <Button
         android:id="@+id/edit_trip_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="68dp"
+        android:layout_height="55dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="#FFF"
+        android:background="@drawable/bushape"
         android:foreground="?attr/actionModeCloseDrawable"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/edit_trip_delete_button"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
+        android:layout_width="124dp"
+        android:layout_height="53dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@android:color/holo_red_dark"
+        android:background="@drawable/bushape"
         android:text="@string/delete_word"
         android:textIsSelectable="false"
         android:textSize="16sp"
@@ -104,7 +114,8 @@
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/bushape"
         android:text="@string/save_changes_word"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_trip_last_date" />
@@ -118,7 +129,9 @@
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="@string/before_uploading_trip_text"
-        android:textSize="20sp"
+        android:textColor="#FEFEFE"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_trip_add_button" />
