--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B7A1ABAC">
+    android:background="#30555C">
 
 
     <TextView
@@ -16,7 +15,8 @@
         android:layout_marginEnd="16dp"
         android:gravity="center_vertical|end"
         android:text=""
-        android:textColor="@color/gray2"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +31,8 @@
         android:checked="true"
         android:gravity="center_vertical"
         android:text="@string/passport_num_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +46,8 @@
         android:layout_marginEnd="16dp"
         android:gravity="center_vertical|end"
         android:text=""
-        android:textColor="@color/gray2"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,6 +59,8 @@
         android:layout_height="35dp"
         android:gravity="center"
         android:text="@string/shipments_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="17sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toEndOf="@+id/profile_trips_number_textview"
@@ -67,6 +72,8 @@
         android:layout_height="35dp"
         android:gravity="center"
         android:text="@string/trips_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="17sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toEndOf="@+id/profile_shipments_number_textview"
@@ -79,6 +86,8 @@
         android:layout_marginStart="8dp"
         android:gravity="center"
         android:text="0"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="19sp"
         app:layout_constraintStart_toEndOf="@+id/profile_image_image_view"
         app:layout_constraintTop_toBottomOf="@+id/profile_shipments_number_textview" />
@@ -90,40 +99,49 @@
         android:layout_marginStart="8dp"
         android:gravity="center"
         android:text="0"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="19sp"
         app:layout_constraintStart_toEndOf="@+id/profile_image_image_view"
         app:layout_constraintTop_toBottomOf="@+id/profile_deals_number_textview" />
 
     <ImageButton
         android:id="@+id/profile_back_button"
-        android:layout_width="68dp"
-        android:layout_height="40dp"
+        android:layout_width="65dp"
+        android:layout_height="48dp"
         android:layout_marginStart="27dp"
         android:layout_marginTop="22dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/bushape"
+        android:foreground="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_media_rew" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/profile_user_name_text_view"
-        android:layout_width="189dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:gravity="center"
         android:text="@string/user_name_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_image_image_view" />
 
     <Button
         android:id="@+id/profile_edit_button"
-        android:layout_width="89dp"
-        android:layout_height="40dp"
+        android:layout_width="159dp"
+        android:layout_height="48dp"
         android:layout_marginTop="22dp"
-        android:layout_marginEnd="17dp"
-        android:background="#FFFFFF"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bushape"
         android:text="@string/edit_word"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -131,10 +149,9 @@
         android:id="@+id/profile_image_image_view"
         android:layout_width="189dp"
         android:layout_height="186dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="110dp"
-        android:background="#FFFFFF"
-        android:foreground="@android:drawable/ic_input_add"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="108dp"
+        android:foreground="@drawable/add_photo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -146,6 +163,8 @@
         android:layout_marginTop="140dp"
         android:gravity="center"
         android:text="0"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="19sp"
         app:layout_constraintStart_toEndOf="@+id/profile_image_image_view"
         app:layout_constraintTop_toTopOf="parent" />
@@ -157,6 +176,8 @@
         android:layout_marginTop="140dp"
         android:gravity="center"
         android:text="@string/deals_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="17sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toEndOf="@+id/profile_deals_number_textview"
@@ -167,10 +188,12 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         android:checked="true"
         android:gravity="center_vertical"
         android:text="@string/email_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -185,6 +208,8 @@
         android:checked="true"
         android:gravity="center_vertical"
         android:text="@string/phone_num_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,21 +219,24 @@
         android:id="@+id/textView3"
         android:layout_width="40dp"
         android:layout_height="24dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
         android:text="@string/rate_word"
-        android:textSize="18sp"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/profile_user_name_text_view"
+        app:layout_constraintStart_toEndOf="@+id/profile_image_image_view"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <RatingBar
         android:id="@+id/profile_ratingbar"
         style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="68dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:foregroundGravity="center_vertical"
         android:numStars="5"
         android:rating="4.3"
         android:stepSize="0.1"
@@ -219,11 +247,12 @@
         android:id="@+id/profile_email_edit_text"
         android:layout_width="240dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:gravity="center_vertical|end"
         android:text=""
-        android:textColor="@color/gray2"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
