--- a/app/src/main/res/layout/activity_create_shipment.xml
+++ b/app/src/main/res/layout/activity_create_shipment.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="left"
-    android:background="#9BB6B3">
+    android:background="@color/darkGround">
 
     <EditText
         android:id="@+id/create_shipment_item_number"
-        android:layout_width="79dp"
+        android:layout_width="50dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
@@ -17,6 +17,7 @@
         android:gravity="center"
         android:inputType="number"
         android:text="0"
+        android:textColor="#F9AA33"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_weight" />
 
@@ -29,28 +30,36 @@
         android:height="40dp"
         android:gravity="center"
         android:text="@string/item_number_word"
+        android:textColor="#FEFEFE"
+        android:textColorHint="#FEFEFE"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_item_weight"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_weight" />
 
     <Button
         android:id="@+id/create_shipment_minus_item"
         android:layout_width="45dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:autoText="false"
+        android:background="@drawable/bushape"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="@android:drawable/ic_delete"
+        android:foreground="@drawable/ic_minus"
         app:layout_constraintStart_toEndOf="@+id/create_shipment_item_number"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_weight" />
 
     <Button
         android:id="@+id/create_shipment_plus_item"
-        android:layout_width="42dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="45dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bushape"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="@android:drawable/ic_input_add"
+        android:foreground="@drawable/ic_plus"
         app:layout_constraintEnd_toStartOf="@+id/create_shipment_item_number"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_weight" />
 
@@ -63,25 +72,29 @@
         android:height="40dp"
         android:gravity="center_vertical"
         android:hint="@string/item_url_word"
+        android:textColor="#F9AA33"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_item_name"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_item_name"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_name" />
 
     <TextView
         android:id="@+id/create_shipment_item_total_weight"
-        android:layout_width="133dp"
+        android:layout_width="144dp"
         android:layout_height="43dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="4dp"
         android:width="80dp"
         android:height="40dp"
         android:gravity="center"
         android:text="Total Weight = 0gm"
+        android:textColor="#F9AA33"
         app:layout_constraintStart_toEndOf="@+id/create_shipment_item_weight"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_total_price" />
 
     <TextView
         android:id="@+id/create_shipment_item_total_price"
-        android:layout_width="133dp"
+        android:layout_width="144dp"
         android:layout_height="43dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
@@ -89,6 +102,7 @@
         android:height="40dp"
         android:gravity="center"
         android:text="Total Price= 0$"
+        android:textColor="#F9AA33"
         app:layout_constraintStart_toEndOf="@+id/create_shipment_item_price"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_url" />
 
@@ -101,6 +115,8 @@
         android:height="40dp"
         android:gravity="center"
         android:hint="@string/item_price_word"
+        android:textColor="#F9AA33"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_item_url"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_url" />
 
@@ -112,6 +128,8 @@
         android:height="40dp"
         android:gravity="center"
         android:hint="item Weight"
+        android:textColor="#F9AA33"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_item_price"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_price" />
 
@@ -122,6 +140,8 @@
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
         android:hint="@string/date_word"
+        android:textColor="#F9AA33"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_to"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_to"
@@ -134,6 +154,8 @@
         android:layout_marginTop="18dp"
         android:gravity="center_vertical"
         android:hint="@string/to_word"
+        android:textColor="#F9AA33"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_from"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_from"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_from" />
@@ -148,6 +170,8 @@
         android:layout_marginBottom="20dp"
         android:gravity="center_vertical"
         android:hint="@string/from_word"
+        android:textColor="#F9AA33"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintBottom_toTopOf="@+id/create_shipment_to"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -163,47 +187,52 @@
         android:height="40dp"
         android:gravity="center_vertical"
         android:hint="@string/item_name_word"
+        android:textColor="#F9AA33"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintEnd_toEndOf="@+id/create_shipment_date"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_date"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_date" />
 
     <Button
         android:id="@+id/create_shipment_get_image_button"
-        android:layout_width="130dp"
+        android:layout_width="124dp"
         android:layout_height="57dp"
-        android:layout_marginTop="32dp"
-        android:foreground="@android:drawable/ic_menu_camera"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/bushape"
+        android:foreground="@drawable/add_photo"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_item_weight"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <ImageView
         android:id="@+id/create_shipment_the_image"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="137dp"
+        android:layout_height="141dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/ic_photo"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/create_shipment_get_image_button"
-        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_number"
-        app:srcCompat="@android:drawable/ic_menu_gallery" />
+        app:layout_constraintTop_toBottomOf="@+id/create_shipment_item_number" />
 
     <Button
         android:id="@+id/create_shipment_add_button"
-        android:layout_width="130dp"
+        android:layout_width="124dp"
         android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/bushape"
         android:text="Add shipment"
         app:layout_constraintStart_toStartOf="@+id/create_shipment_get_image_button"
         app:layout_constraintTop_toBottomOf="@+id/create_shipment_get_image_button" />
 
     <Button
         android:id="@+id/create_shipment_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_width="66dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:background="#FFF"
+        android:background="@drawable/bushape"
         android:foreground="?attr/actionModeCloseDrawable"
+        android:textColorHint="#FEFEFE"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
