--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,10 @@
         android:layout_height="56dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:background="#FFF"
+        android:background="@color/navigationColor"
         android:layout_gravity="start"
+        app:itemIconTint="@color/yellowColor"
+        app:itemTextColor="@color/yellowColor"
         app:menu="@menu/bottom_nav_items"/>
 
 </RelativeLayout>
