--- a/app/src/main/res/layout/activity_rejester.xml
+++ b/app/src/main/res/layout/activity_rejester.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="80dp"
-        android:layout_marginStart="40dp">
+        android:layout_marginStart="20dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,13 +32,57 @@
 
             <EditText
                 android:id="@+id/etregemail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="47dp"
+                android:width="200dp"
+                android:inputType="textEmailAddress"
+                android:textColor="#ffffff" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textViewfirst"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:width="200dp"
-                android:layout_marginLeft="47dp"
-                android:inputType="textEmailAddress"
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@+id/button3"
+                android:layout_marginRight="2dp"
+                android:text="First name"
                 android:textColor="#ffffff"/>
+
+            <EditText
+                android:id="@+id/et_reg_first_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:width="90dp"
+                android:inputType="text"
+                android:textColor="#ffffff" />
+
+            <TextView
+                android:id="@+id/textViewsecond"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@+id/button3"
+                android:layout_marginRight="2dp"
+                android:text="Second name"
+                android:textColor="#ffffff"/>
+
+            <EditText
+                android:id="@+id/et_reg_second_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:width="90dp"
+                android:inputType="text"
+                android:textColor="#ffffff" />
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,12 +101,12 @@
 
             <EditText
                 android:id="@+id/etregname"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:width="200dp"
                 android:layout_marginLeft="47dp"
+                android:width="200dp"
                 android:inputType="text"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff" />
         </LinearLayout>
 
 
@@ -83,12 +127,12 @@
 
             <EditText
                 android:id="@+id/etregpass"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:width="200dp"
                 android:inputType="textPassword"
-                android:layout_marginLeft="20dp"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,12 +151,12 @@
 
             <EditText
                 android:id="@+id/etregcon"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
                 android:width="200dp"
                 android:inputType="textPassword"
-                android:layout_marginLeft="0dp"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -131,12 +175,12 @@
 
             <EditText
                 android:id="@+id/etid"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
                 android:width="200dp"
                 android:inputType="number"
-                android:layout_marginLeft="40dp"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff" />
         </LinearLayout>
 
     </LinearLayout>
