--- a/app/src/main/res/layout/activity_shipment_deal_path.xml
+++ b/app/src/main/res/layout/activity_shipment_deal_path.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/darkGround">
 
     <CheckBox
         android:id="@+id/shipment_deal_path_step_5"
@@ -15,6 +15,7 @@
         android:scaleX="3"
         android:scaleY="3"
         android:text="@string/shipper_confirmation_text"
+        android:textColor="#FEFEFE"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_4" />
@@ -28,6 +29,7 @@
         android:scaleX="3"
         android:scaleY="3"
         android:text="@string/meet_shipper_text"
+        android:textColor="#FEFEFE"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_3" />
@@ -41,6 +43,7 @@
         android:scaleX="3"
         android:scaleY="3"
         android:text="@string/reach_destination_text"
+        android:textColor="#FEFEFE"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_2" />
@@ -53,6 +56,7 @@
         android:layout_marginTop="16dp"
         android:scaleX="3"
         android:scaleY="3"
+        android:textColor="#FEFEFE"
         android:text="@string/fly_from_home_text"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +72,7 @@
         android:scaleY="3"
         android:text="@string/receive_shipment_text"
         android:textSize="8sp"
+        android:textColor="#FEFEFE"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,7 +83,7 @@
         android:layout_marginStart="110dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="110dp"
-        android:background="#0288D1"
+        android:background="@drawable/bushape"
         android:text="progress"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,9 +112,9 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="130dp"
         android:background="#689F38"
-        android:visibility="invisible"
         android:text="@string/rate_word"
         android:textSize="20sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_rating_bar" />
