--- a/app/src/main/res/layout/fragment_inbox_nav.xml
+++ b/app/src/main/res/layout/fragment_inbox_nav.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_gravity="start"
-        android:background="@color/gray1"
+        android:background="@drawable/bushape"
         android:outlineSpotShadowColor="@color/cardview_dark_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
