--- a/app/src/main/res/layout/fragment_more_nav.xml
+++ b/app/src/main/res/layout/fragment_more_nav.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="left">
+    android:layout_gravity="left"
+    android:background="@color/darkGround">
 
 
     <ImageView
         android:id="@+id/more_profile_image"
         android:layout_width="116dp"
         android:layout_height="106dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="52dp"
-        android:src="@android:drawable/ic_menu_camera"
+        android:src="@drawable/outline_photo_black_18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,9 +22,9 @@
         android:id="@+id/more_goto_prifle_button"
         android:layout_width="150dp"
         android:layout_height="51dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="69dp"
         android:layout_marginTop="82dp"
-        android:background="#FFEB3B"
+        android:background="@drawable/bushape"
         android:text="@string/go_profile_word"
         app:layout_constraintStart_toEndOf="@+id/more_profile_image"
         app:layout_constraintTop_toTopOf="parent" />
