--- a/app/src/main/res/layout/fragment_search_nav.xml
+++ b/app/src/main/res/layout/fragment_search_nav.xml
@@ -10,94 +10,113 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Container for Shipment_Shower_Freg & Trip_Shower_Freg-->
         <RelativeLayout
             android:id="@+id/upper_page"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="185dp"
             android:layout_alignParentTop="true"
-            android:background="@color/up">
+            android:layout_marginTop="-2dp"
+            android:background="@color/navigationColor">
 
             <EditText
                 android:id="@+id/from"
                 android:layout_width="220dp"
                 android:layout_height="35dp"
-                android:padding="7dp"
                 android:layout_marginStart="5dp"
-                android:background="#FFF"
-                android:textColorHighlight="#000"
-                android:hint="From Enter Countery"
-                android:inputType="textAutoComplete" />
+                android:layout_marginTop="8dp"
+                android:background="@drawable/rounded_edit_text"
+                android:hint=" From : "
+                android:inputType="textAutoComplete"
+                android:drawableLeft="@drawable/outline_flight_takeoff_black_18dp"
+                android:padding="7dp"
+                android:textColor="@color/navigationColor"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
+                android:textColorHighlight="#000" />
+
             <EditText
                 android:id="@+id/to"
                 android:layout_width="220dp"
                 android:layout_height="35dp"
-                android:padding="7dp"
-                android:layout_marginTop="5dp"
+                android:layout_below="@+id/from"
                 android:layout_marginStart="5dp"
-                android:background="#FFF"
-                android:textColorHighlight="#000"
-                android:hint="To Enter Countery"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_edit_text"
+                android:hint=" To : "
                 android:inputType="textAutoComplete"
-                android:layout_below="@+id/from"/>
+                android:drawableLeft="@drawable/outline_flight_land_black_18dp"
+                android:padding="7dp"
+                android:textColor="@color/navigationColor"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
+                android:textColorHighlight="#000" />
+
             <EditText
                 android:id="@+id/date"
                 android:layout_width="220dp"
                 android:layout_height="35dp"
-                android:padding="7dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="5dp"
-                android:background="#FFF"
-                android:textColorHighlight="#000"
-                android:hint="day/mon/year"
-                android:inputType="textAutoComplete"
                 android:layout_below="@+id/to"
-                />
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/rounded_edit_text"
+                android:drawableLeft="@drawable/date_ic"
+                android:hint=" Date "
+                android:inputType="textAutoComplete"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
+                android:padding="7dp"
+                android:textColor="@color/navigationColor"
+                android:textColorHighlight="#000" />
+
             <EditText
                 android:id="@+id/weight"
-                android:layout_width="150dp"
+                android:layout_width="140dp"
                 android:layout_height="35dp"
-                android:padding="7dp"
-                android:background="#FFF"
-                android:textColorHighlight="#000"
-                android:hint="Weight (Kg)"
-                android:inputType="textAutoComplete"
+                android:layout_marginTop="8dp"
                 android:layout_marginStart="20dp"
                 android:layout_toEndOf="@+id/from"
-                />
+                android:background="@drawable/rounded_edit_text"
+                android:hint=" Weight (Kg)"
+                android:drawableLeft="@drawable/round_lock_black_18dp"
+                android:inputType="textAutoComplete"
+                android:padding="7dp"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
+                android:textColor="@color/navigationColor"
+                android:textColorHighlight="#000" />
 
             <Button
                 android:id="@+id/search_button"
-                android:layout_width="130dp"
+                android:layout_width="140dp"
                 android:layout_height="50dp"
-                android:padding="7dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="13dp"
-                android:layout_toEndOf="@+id/date"
                 android:layout_below="@+id/weight"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="18dp"
+                android:layout_toEndOf="@+id/date"
+                android:background="@drawable/bushape"
+                android:padding="7dp"
                 android:text="@string/search_word"
-                android:textSize="15sp"
-                android:background="@color/gray2"
-                />
+                android:textSize="20sp" />
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/search_page_upper_tab"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@color/gray1"
-                android:outlineSpotShadowColor="@color/cardview_dark_background"
+                android:layout_height="45dp"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="start"
-                app:menu="@menu/search_page_upper_tab_items"/>
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/bushape"
+                app:menu="@menu/search_page_upper_tab_items" />
         </RelativeLayout>
 
-        <!-- Container for Shipment_Shower_Freg & Trip_Shower_Freg-->
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/search_page_viewer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/upper_page"
-            android:background="@color/down"
-            />
+            android:background="@color/gray2" />
 
     </RelativeLayout>
 
