--- a/app/src/main/res/layout/shipment_deal_item.xml
+++ b/app/src/main/res/layout/shipment_deal_item.xml
@@ -9,7 +9,6 @@
         android:id="@+id/shipment_deal_item_upper_part"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:background="#0097A7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,7 +19,7 @@
             android:layout_height="10dp"
             android:layout_marginTop="14dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/outline_arrow_right_alt_black_18dp"
             app:layout_constraintEnd_toStartOf="@+id/shipment_deal_item_countery_to"
             app:layout_constraintStart_toEndOf="@+id/shipment_deal_item_countery_from"
             app:layout_constraintTop_toBottomOf="@+id/shipment_deal_item_name" />
@@ -69,7 +68,8 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
             android:textSize="17sp"
-            android:textStyle="bold|italic"
+            android:textStyle="bold
+"
             app:layout_constraintStart_toEndOf="@+id/shipment_deal_item_product_image"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="shipment name" />
@@ -106,14 +106,14 @@
             android:id="@+id/shipment_deal_item_date"
             android:layout_width="280dp"
             android:layout_height="34dp"
-            android:layout_marginTop="5dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
             android:textSize="17sp"
             app:layout_constraintStart_toEndOf="@+id/shipment_deal_item_product_image"
-            app:layout_constraintTop_toBottomOf="@+id/shipment_deal_item_countery_from"
-            tools:text="Shipment date" />
+            tools:layout_editor_absoluteY="75dp"
+            tools:text="Shipment date"
+            tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -132,7 +132,7 @@
             android:layout_height="45dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="11dp"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/outline_account_box_black_18dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -170,7 +170,7 @@
             android:layout_height="57dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="5dp"
-            android:background="#FBC82D"
+            android:background="@drawable/bushape"
             android:text="@string/show_step"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
