--- a/app/src/main/res/layout/trip_item.xml
+++ b/app/src/main/res/layout/trip_item.xml
@@ -4,14 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="205dp">
+    android:layout_height="200dp"
+    android:background="@drawable/item_borders">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/trip_item_upper_part"
-        android:layout_width="393dp"
+        android:layout_width="0dp"
         android:layout_height="130dp"
-        android:background="#6985A1"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/bushape3"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +46,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher_background"
+            android:scaleType="center"
+            android:src="@drawable/outline_arrow_right_alt_black_18dp"
             app:layout_constraintStart_toEndOf="@+id/trip_item_country_from"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,15 +68,15 @@
 
         <TextView
             android:id="@+id/trip_item_date"
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="26dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="3dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/trip_item_country_from"
             tools:text="10/15/2020" />
@@ -81,7 +87,7 @@
             android:layout_height="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="12dp"
-            android:src="@mipmap/ic_launcher_round"
+            android:background="@drawable/round_lock_black_18dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/trip_item_date" />
 
@@ -98,41 +104,19 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/trip_item_date"
-            tools:text="available weight 15kg" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="12dp"
-            android:src="@mipmap/ic_launcher"
-            app:layout_constraintStart_toEndOf="@+id/trip_item_available_weight"
-            app:layout_constraintTop_toBottomOf="@+id/trip_item_date" />
-
-        <TextView
-            android:id="@+id/trip_item_consumed_weight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/trip_item_date"
-            tools:text="consumed weight 3kg" />
+            tools:text="Available Weight 15KG" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="393dp"
+        android:id="@+id/constraintLayout"
+        android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="#7AA7BF"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:background="#232F34"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trip_item_upper_part">
 
@@ -140,7 +124,7 @@
             android:id="@+id/trip_item_profile_img"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginStart="64dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="11dp"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="15dp"
             android:layout_below="@+id/trip_item_profile_name"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="15dp"
             android:layout_toRightOf="@+id/trip_item_profile_img"
             android:numStars="5"
             android:rating="4.3"
@@ -162,9 +146,9 @@
 
         <TextView
             android:id="@+id/trip_item_profile_name"
-            android:layout_width="110dp"
-            android:layout_height="21dp"
-            android:layout_marginStart="5dp"
+            android:layout_width="150dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"
@@ -179,8 +163,8 @@
             android:layout_width="120dp"
             android:layout_height="35dp"
             android:layout_marginTop="18dp"
-            android:layout_marginEnd="35dp"
-            android:background="#FF0"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/bushape"
             android:text="@string/send_request_question"
             android:textSize="12sp"
             android:textStyle="italic"
